# rust-exonum-cryptocurrency-basic

./: Cargo.toml  README.md
examples/: create-wallet-2.json  demo.rs  transfer-funds.json
src/: cryptoapi.rs  error.rs  lib.rs  schema.rs  service_interface.rs  transactions.rs  wallets.rs
src/proto/: mod.rs  service.proto
