[package]
name = "cryptocurrency"
version = "0.1.0"
edition = "2018"
authors = ["cem cemg@live.co.uk"]



[dependencies]
exonum = "1.0.0"
exonum-crypto = "1.0.0"
exonum-derive = "1.0.0"
exonum-proto = "1.0.0"
exonum-rust-runtime = "1.0.0"
exonum-merkledb = "1.0.0"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }

anyhow = "1.0"
failure = "0.1.5"
protobuf = "2.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
exonum-cli = "1.0.0"


[build-dependencies]
exonum-build = "1.0.1"
